--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+}
+body{
+  background-color: #f5f6fa;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app_header{
+  color: #fc3c3c;
+  font-size: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app_header{
+  display: flex;
+  align-items: center;
+  margin: 20px;
+  justify-content: space-between;
+}
+.app_dropdown{
+  background-color: white;
+}
+.app_left{
+  flex: 0.9;
+}
+.app_right{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.app_right .MuiCardContent{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1; 
 }
 
-.App-link {
-  color: #61dafb;
+.app_stats{
+  display: flex;
+  justify-content: space-between;
+}
+.app_graph{
+  flex-grow: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.app_graph_title{
+  margin-top: 10px;
+}
+@media (max-width:990px) {
+  .App{
+    flex-direction: column;
   }
 }
