--- a/src/Table.css
+++ b/src/Table.css
@@ -1,6 +1,7 @@
 .table{
     margin-top: 20px;
     overflow: scroll;
+    color: #6a5d5d;
     height: 400px;
     background-color: lightgrey;
 }
@@ -11,6 +12,7 @@
 
 .table td{
     padding: 0.5rem;
+    border: none;
 }
 .table tr:nth-of-type(odd){
     background-color: #f3f2f8;
